# SelfBalancingRobot

./: LICENSE  README.md  hyperparameters.txt  out.py
src/: CMakeLists.txt  package.xml
src/CartPole/devel/: .catkin  setup.sh
src/CartPole/devel/lib/pkgconfig/: commander.pc  robot_control.pc  robot_description.pc  robot_launch.pc
src/CartPole/src/commander/launch/: commander.launch
src/CartPole/src/commander/scripts/: DQN_learning.py  ddqn.py  env.py  main.py  ppo.py  ppo_actor.pth  ppo_critic.pth  task.py
src/CartPole/src/robot_control/: package.xml
src/CartPole/src/robot_control/config/: controller.yaml
src/CartPole/src/robot_control/launch/: robot_control.launch
src/CartPole/src/robot_launch/: CMakeLists.txt
src/SelfBalancingRobot/: CMakeLists.txt  package.xml
src/SelfBalancingRobot/launch/: main.launch
src/SelfBalancingRobot/scripts/: arguments.py  deep_rl.py  main.py  network.py  out.py  pid_controller.py  ppo_actor.pth  ppo_critic.pth
src/SelfBalancingRobot/urdf/: robot.urdf
src/launch/: main.launch
src/scripts/: CMakeLists.txt  callback.py  deep_rl.py  env.cpp  env.h  env.py  main.py  network.py  out.py  ppo.py  ppo_actor.pth  ppo_critic.pth
src/scripts/baselines/: borrar.py  borrar2.py  callback.py  debugging.py  debugging_wrapper.py  env.py  main.py
src/scripts/env_cpp/: env.cpp  env.py  main.cpp  main.py
src/scripts/logs/: evaluations.npz
src/scripts/logs/corrida sin callbacks 15-6-23/: evaluations.npz
src/scripts/models/ppo_model/: balancing_robot_statistics.pkl  hyperparameters.txt
src/urdf/: robot.urdf  robot.xacro
(+50 files in other folders)
